force-app/main/default/objects/Opportunity_Group__c/Opportunity_Group__c.object-meta.xml
<CustomObject>
    <description>Groups opportunities by league/competition and season for management purposes</description>
    <label>Opportunity Group</label>
    <nameField>
        <displayFormat>OG-{00000}</displayFormat>
        <label>Opportunity Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>