force-app/main/default/objects/Opportunity_Group__c/fields/Competition_Type__c.field-meta.xml
<CustomField>
    <fullName>Competition_Type__c</fullName>
    <label>Competition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>League</fullName>
                <default>true</default>
                <label>League</label>
            </value>
            <value>
                <fullName>Cup</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>