force-app/main/default/objects/Opportunity_Group__c/fields/Governing_Body__c.field-meta.xml
<CustomField>
    <fullName>Governing_Body__c</fullName>
    <description>Governing body (e.g., "FIFA", "ICC", "NBA", "AFL House")</description>
    <label>Governing Body</label>
    <length>100</length>
    <type>Text</type>
</CustomField>