force-app/main/default/objects/Opportunity_Group__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>Season identifier (e.g., "2024/25" or "2025")</description>
    <label>Season</label>
    <length>20</length>
    <type>Text</type>
</CustomField>