force-app/main/default/objects/Opportunity_Group__c/fields/Sport_Type__c.field-meta.xml
<CustomField>
    <fullName>Sport_Type__c</fullName>
    <label>Sport Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soccer</fullName>
                <default>true</default>
                <label>Soccer</label>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>NFL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>