force-app/main/default/objects/Opportunity_Group__c/fields/Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level__c</fullName>
    <description>1 = Premier/NBA, 2 = Championship/G-League, etc.</description>
    <label>Tier Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>